--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
 
     <string name="workout"><a href="http://www.youtube.com">Youtube</a></string>
     <string name="dataSeries">0=1;1=2;2=1;3=0</string>
+
+    <string name="facebook_app_id">215857252109294</string>
 </resources>
